fix(product) #196 fix home page

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -102,8 +102,7 @@
 			<div class="container">
 				<div class="col-sm-12 col-md-6">
 					<header class="section-header text-left">
-						<span>EN SAVOIR PLUS</span>
-						<h2>Qu'est-ce que le CCI-LINK</h2>
+						<h2>Présentation CCI-LINK</h2>
 					</header>
 					<p class="lead">CCI-LINK est un site de mise en relation entre entreprise et apprenant créé par le centre de formation en alternance.</p>
 					<p>Il a pour but de rendre la communication entre apprenants et entreprises plus simple, plus rapide et plus claire !</p>
