fix(product): update-exp

--- a/templates/students/show.html.twig
+++ b/templates/students/show.html.twig
@@ -118,7 +118,7 @@
 			<div class="container">
 				<header class="section-header">
 					<span>Dernières expériences acquises</span>
-					<h2>Expérience professionnelle</h2>
+					<h2>Expériences professionnelles</h2>
 				</header>
 
 				<div
