--- a/templates/students/show.html.twig
+++ b/templates/students/show.html.twig
@@ -6,7 +6,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-4">
-					<img src="assets/img/avatar.jpg" alt="">
+					<img src="{{ asset('uploads/images/' ~ student.image) }}" alt="profile-image">
 				</div>
 				<div class="col-xs-12 col-sm-8 header-detail">
 					<div class="hgroup">
