--- a/templates/students/show.html.twig
+++ b/templates/students/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<!-- Page header -->
-	<header class="page-header bg-img" style="background-image: url(assets/img/bg-banner1.jpg)">
+	<header class="page-header bg-img" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-4">
@@ -44,15 +44,6 @@
 							<a href="#">{{student.email}}</a>
 						</li>
 					</ul>
-					<div class="tag-list">
-						<span>HTML5</span>
-						<span>CSS3</span>
-						<span>Bootstrap</span>
-						<span>ReactJS</span>
-						<span>SASS / LESS</span>
-						<span>Grunt / Gulp</span>
-						<span>Wordpress</span>
-					</div>
 				</div>
 			</div>
 			<div class="button-group">
@@ -68,9 +59,10 @@
 						</a>
 					</li>
 				</ul>
-				<div class="action-buttons">
-					<a class="btn btn-gray" href="#">Télécharger le CV</a>
-					<a class="btn btn-success" data-toggle="modal" data-target="#modal-contact" href="#">Contacter</a>
+				<div
+					class="action-buttons">
+					{# <a class="btn btn-gray" href="#">Télécharger le CV</a>
+										<a class="btn btn-success" data-toggle="modal" data-target="#modal-contact" href="#">Contacter</a> #}
 					{% if is_granted('ROLE_ADMIN') %}
 						<a data-student-id="{{student.id}}" id='sms-send' class="btn btn-primary">Inviter</a>
 					{% endif %}
@@ -84,8 +76,9 @@
 		<!-- Education -->
 		<section>
 			<div class="container">
-				<header class="section-header">
-					<span>Derniers diplômes obtenus</span>
+				<header
+					class="section-header">
+					{# <span>Derniers diplômes obtenus</span> #}
 					<h2>Diplômes</h2>
 				</header>
 				{% for education in educations %}
@@ -93,18 +86,20 @@
 						<div class="col-xs-12">
 							<div class="item-block">
 								<header>
-									<img src="assets/img/logo-mit.png" alt="">
+									{# <img src="{{ asset('assets/img/logo-mit.png') }}" alt=""> #}
 									<div class="hgroup">
 										<h4>{{education.degree}}
 											<small>{{education.speciality}}</small>
 										</h4>
 										<h5>{{education.schoolname}}</h5>
 									</div>
-									<h6 class="time">{{education.datefrom|date('Y')}} - {{education.dateto|date('Y')}}</h6>
+									<h6 class="time">{{education.datefrom|date('Y')}}
+										-
+										{{education.dateto|date('Y')}}</h6>
 								</header>
-								<div class="item-body">
+								{# <div class="item-body">
 									<p>Pas de colonne correspondante dans la BDD (educations->description ???).</p>
-								</div>
+								</div> #}
 							</div>
 						</div>
 					</div>
@@ -116,8 +111,9 @@
 		<!-- Work Experience -->
 		<section class="bg-alt">
 			<div class="container">
-				<header class="section-header">
-					<span>Dernières expériences acquises</span>
+				<header
+					class="section-header">
+					{# <span>Dernières expériences acquises</span> #}
 					<h2>Expérience professionnelle</h2>
 				</header>
 
@@ -125,36 +121,27 @@
 					class="row">
 
 					<!-- Work item -->
-                    {% for experience in experiences %}
-					<div class="col-xs-12">
-						<div class="item-block">
-							<header>
-								<img src="assets/img/logo-google.jpg" alt="">
-								<div class="hgroup">
-									<h4>{{experience.title}}</h4>
-									<h5>{{experience.post}}</h5>
+					{% for experience in experiences %}
+						<div class="col-xs-12">
+							<div class="item-block">
+								<header>
+									{# <img src="assets/img/logo-google.jpg" alt=""> #}
+									<div class="hgroup">
+										<h4>{{experience.title}}</h4>
+										<h5>{{experience.post}}</h5>
+									</div>
+									<h6 class="time">{{experience.datefrom|date('Y')}}
+										-
+										{{experience.dateto|date('Y')}}</h6>
+								</header>
+								<div class="item-body">
+									<p>{{experience.description}}</p>
 								</div>
-								<h6 class="time">{{experience.datefrom|date('Y')}} - {{experience.dateto|date('Y')}}</h6>
-							</header>
-							<div class="item-body">
-								<p>{{experience.description}}</p>
-								<ul>
-									<li>lol</li>
-									<li>comment</li>
-									<li>tu</li>
-									<li>veux</li>
-									<li>faire</li>
-									<li>ça</li>
-									<li>avec un champs varchar</li>
-								</ul>
 							</div>
 						</div>
-					</div>
-                    {% endfor %}
+					{% endfor %}
 					<!-- END Work item -->
-
 				</div>
-
 			</div>
 		</section>
 		<!-- END Work Experience -->
@@ -163,73 +150,23 @@
 		<section>
 			<div class="container">
 				<header class="section-header">
-					<span>Expertise Areas (??)</span>
+					{# <span>Expertise Areas (??)</span> #}
 					<h2>Compétences</h2>
 				</header>
-
 				<br>
 				<ul class="skills cols-3">
-					<li>
-						<div>
-							<span class="skill-name">Comment</span>
-							<span class="skill-value">100%</span>
-						</div>
-						<div class="progress">
-							<div class="progress-bar" style="width: 100%;"></div>
-						</div>
-					</li>
-
-					<li>
-						<div>
-							<span class="skill-name">Tu</span>
-							<span class="skill-value">95%</span>
-						</div>
-						<div class="progress">
-							<div class="progress-bar" style="width: 95%;"></div>
-						</div>
-					</li>
-
-					<li>
-						<div>
-							<span class="skill-name">Définis</span>
-							<span class="skill-value">80%</span>
-						</div>
-						<div class="progress">
-							<div class="progress-bar" style="width: 80%;"></div>
-						</div>
-					</li>
-
-					<li>
-						<div>
-							<span class="skill-name">Les</span>
-							<span class="skill-value">60%</span>
-						</div>
-						<div class="progress">
-							<div class="progress-bar" style="width: 60%;"></div>
-						</div>
-					</li>
-
-					<li>
-						<div>
-							<span class="skill-name">Skills</span>
-							<span class="skill-value">70%</span>
-						</div>
-						<div class="progress">
-							<div class="progress-bar" style="width: 70%;"></div>
-						</div>
-					</li>
-
-					<li>
-						<div>
-							<span class="skill-name">A juger ??</span>
-							<span class="skill-value">90%</span>
-						</div>
-						<div class="progress">
-							<div class="progress-bar" style="width: 90%;"></div>
-						</div>
-					</li>
+					{% for skill in student.skills %}
+						<li>
+							<div>
+								<span class="skill-name">{{skill.title}}</span>
+								<span class="skill-value">{{skill.percentage}}%</span>
+							</div>
+							<div class="progress">
+								<div class="progress-bar" style="width: {{skill.percentage}}%;"></div>
+							</div>
+						</li>
+					{% endfor %}
 				</ul>
-
 			</div>
 		</section>
 		<!-- END Skills -->
@@ -241,5 +178,5 @@
 {% endblock %}
 
 {% block javascripts %}
-  	<script src="{{ asset('assets/js/invitation.js') }}"></script>
+	<script src="{{ asset('assets/js/invitation.js') }}"></script>
 {% endblock %}
