feat(product) : add good background to all pages

--- a/templates/businesses/new.html.twig
+++ b/templates/businesses/new.html.twig
@@ -5,7 +5,7 @@
 
   {{ form_start(form) }}
   <!-- Page header -->
-  <header class="page-header bg-img" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }});">
+  <header class="page-header" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
     <div class="container page-name">
       <h1 class="text-center">Ajouter une entreprise</h1>
       <p class="lead text-center">Formulaire de création d'un profil entreprise</p>
