--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<header class="page-header bg-img" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
+	<header class="page-header" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
 		<div class="container page-name">
 			<h1 class="text-center">Liste des offres d'emploi disponibles</h1>
 			<p class="lead text-center">Faciliter votre recherche à l'aide du filtre :</p>
