--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 	<!-- Page header -->
-	<header class="page-header bg-img" style="background-image: url(assets/img/bg-banner1.jpg);">
+	<header class="page-header" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
 		<div class="container page-name">
 			{% if app.user %}
 				<h1 class="text-center">Liste des alternants</h1>
