--- a/templates/businesses/index.html.twig
+++ b/templates/businesses/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <!-- Page header -->
-    <header class="page-header bg-img" style="background-image: url(assets/img/bg-banner1.jpg);">
+    <header class="page-header" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
       <div class="container page-name">
         <h1 class="text-center">Liste des entreprises</h1>
         <p class="lead text-center">Faciliter votre recherche à l'aide du filtre :</p>
