--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -25,7 +25,7 @@
 	<body class="login-page">
 		<main>
 			<div class="login-block">
-				<img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png" alt="">
+				<img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png" alt="Logo CCI-CFA">
 				<h1>Bienvenue sur CCI-LINK,<br>{{user.student.firstName}}</h1>
 				<form method="post">
 					<div class="form-group">
