--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -9,7 +9,7 @@
 
 		<div class="logo-wrapper">
 			<a class="logo" href="{{ path("home") }}"><img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png {# {{ asset('assets/img/logo.png') }} #}" alt="logo"></a>
-			<a class="logo-alt" href="{{ path("home") }}"><img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png {# {{ asset('assets/img/logo-alt.png') }} #}" alt="logo-alt"></a>
+			<a class="logo-alt" href="{{ path("home") }}"><img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png {# {{ asset('assets/img/logo-alt.png') }} #}" alt="logo"></a>
 		</div>
 
 	</div>
