--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -22,7 +22,7 @@
     <main>
 
       <div class="login-block">
-        <img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png" alt="">
+        <img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png" alt="Logo CCI-CFA">
         <h1>Se connecter à votre compte</h1>
 
         <form method="post">
