--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -79,7 +79,7 @@
 								<a class="item-block" href="{{student.id}}">
 									<header>
 										{% if student.image %}
-											<img class="resume-avatar" src="{{ asset('uploads/images/' ~ student.image) }}" alt="">
+											<img class="resume-avatar" src="{{ asset('uploads/images/' ~ student.image) }}" alt="Photo de profil de l'alternant">
 										{% endif %}
 										<div class="hgroup">
 											<h4>{{student.firstname}}
