--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -8,7 +8,7 @@
 	<header class="page-header bg-img size-lg" style="background-image: url(assets/img/bg-banner2.jpg)">
 		<div class="container">
 			<div class="header-detail">
-				<img class="logo" src="{{ asset('uploads/images/' ~ business.image) }}" alt="logo-business">
+				<img class="logo" src="{{ asset('uploads/images/' ~ business.image) }}" alt="logo entreprise">
 				<div class="hgroup">
 					<h1>{{ business.name }}</h1>
 					<h3>{{ business.slogan }}</h3>
@@ -123,7 +123,7 @@
 						<div class="col-xs-12">
 							<a class="item-block" href="{{ path('offer_show', {'id': offer.id}) }}">
 								<header>
-									<img src="{{ asset('assets/img/logo-google.jpg') }}" alt="">
+									<img src="{{ asset('assets/img/logo-google.jpg') }}" alt="logo entreprise">
 									<div class="hgroup">
 										<h4>
 											<td>{{ offer.title }}</td>
