--- a/templates/offers/show.html.twig
+++ b/templates/offers/show.html.twig
@@ -5,7 +5,7 @@
 	<header class="page-header bg-img size-lg" style="background-image: url(assets/img/bg-banner2.jpg)">
 		<div class="container">
 			<div class="header-detail">
-				<img class="logo" src="assets/img/logo-google.jpg" alt="">
+				<img class="logo" src="assets/img/logo-google.jpg" alt="logo entreprise">
 				<div class="hgroup">
 					<h1>{{offer.title}}</h1>
 					<h3>
