--- a/templates/students/new.html.twig
+++ b/templates/students/new.html.twig
@@ -6,4 +6,5 @@
 
 {% block javascripts %}
 	<script src="{{ asset('assets/js/skills.js') }}"></script>
+	<script src="{{ asset('assets/js/sticky.js') }}"></script>
 {% endblock %}
