add modal delete box

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,8 @@
         
         {% include "/ressources/js.html.twig" %}
 
+        {% block modal %}{% endblock %}
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>
