--- a/templates/offers/_delete_form.html.twig
+++ b/templates/offers/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('offer_delete', {'id': offer.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('offer_delete', {'id': offer.id}) }}">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ offer.id) }}">
-    <button class="btn btn-xs btn-danger">Supprimer</button>
+    <button class="btn btn-danger"><i class="fa fa-trash" aria-hidden="true"></i> Supprimer</button>
 </form>
