--- a/templates/students/show.html.twig
+++ b/templates/students/show.html.twig
@@ -69,6 +69,10 @@
 				<div class="action-buttons">
 					{% if is_granted('ROLE_ADMIN') %}
 						<a data-student-id="{{student.id}}" id='sms-send' class="btn btn-primary">Inviter</a>
+						<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal{{ student.id }}">
+							Supprimer
+						</button>
+						
 					{% endif %}
 				</div>
 			</div>
@@ -165,11 +169,34 @@
 		<!-- END Skills -->
 	</main>
 	<!-- END Main container -->
-	{% if is_granted('ROLE_ADMIN') %}
+{% endblock %}
+
+{% block modal %}
+<!-- Modal -->
+<div class="modal fade" id="modal{{ student.id }}" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Suppresion de l'étudiant : {{ student.firstname }} {{ student.lastname }}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        La suppresion d'un étudiant est définitif et ne peux pas être annuler.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Annuler</button>
+		<div class="delete-btn">
 		{{ include('students/_delete_form.html.twig') }}
-	{% endif %}
+		</div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 {% block javascripts %}
 	<script src="{{ asset('assets/js/invitation.js') }}"></script>
 {% endblock %}
+
