feat(product) edit button on student / delete confirmation flash

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,9 @@
 
         {% block stylesheets %}{% endblock %}
     </head>
+
+    {% block flashes %}{% endblock %}
+
     <body class="nav-on-header smart-nav">
         <nav class="navbar">
             {% include "/ressources/navbar.html.twig" %}
