--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -78,7 +78,14 @@
 						{% if is_granted('ROLE_BUSINESS') %}
 							<a class="btn btn-primary" href="{{ path('offer_new') }}">Ajouter une offre</a>
 						{% endif %}
-
+						{% if is_granted('ROLE_ADMIN') %}
+							<a type="button" class="btn btn-primary" href="{{ path("business_edit", { 'id' : business.id }) }}">
+								Modifier
+							</a>
+							<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal{{ business.id }}">
+								Supprimer
+							</button>
+						{% endif %}
 					</div>
 				</div>
 
@@ -165,7 +172,29 @@
 
 	</main>
 	<!-- END Main container -->
-	{% if is_granted('ROLE_ADMIN') %}
-		{{ include('businesses/_delete_form.html.twig') }}
-	{% endif %}
+{% endblock %}
+
+{% block modal %}
+<!-- Modal -->
+<div class="modal fade" id="modal{{ business.id }}" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Suppresion de l'offre : {{ business.name }}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        La suppresion d'une offre est définitive et ne peux pas être annuler.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Annuler</button>
+		<div class="delete-btn">
+			{{ include('businesses/_delete_form.html.twig') }}
+		</div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
