--- a/templates/businesses/new.html.twig
+++ b/templates/businesses/new.html.twig
@@ -161,10 +161,7 @@
       </div>
       <div class="button-group">
         <div class="action-buttons">
-          <div class="upload-button">
-            <button class="btn btn-block btn-primary">Choisir une image de couverture</button>
-            <input id="cover_img_file" type="file">
-          </div>
+          <button class="btn btn-block btn-success" type="submit">Valider l'inscription</button>
         </div>
       </div>
     </div>
@@ -263,7 +260,7 @@
           <h2>Soumettre</h2>
           <p>Veuillez revoir vos informations une fois de plus et appuyer sur le bouton ci-dessous pour mettre votre entreprise en ligne.</p>
         </header>
-        <p class="text-center">{{ form_widget(form.submit, { 'label': 'Valider votre inscription' }) }}</p>
+        <p class="text-center"></p>
       </div>
     </section>
     <!-- END Submit -->
