--- a/templates/businesses/new.html.twig
+++ b/templates/businesses/new.html.twig
@@ -5,12 +5,12 @@
 
   {{ form_start(form) }}
   <!-- Page header -->
-  <header class="page-header" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
+  <header class="page-header header-add-new" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
     <div class="container page-name">
       <h1 class="text-center">Ajouter une entreprise</h1>
       <p class="lead text-center">Formulaire de création d'un profil entreprise</p>
     </div>
-    <div class="container">
+    <div class="container form-add-business">
       <div class="row">
         <div class="col-xs-12">
           <div class="row">
@@ -159,14 +159,6 @@
           </div>
         </div>
       </div>
-      <div class="button-group">
-        <div class="action-buttons">
-          <div class="upload-button">
-            <button class="btn btn-block btn-primary">Choisir une image de couverture</button>
-            <input id="cover_img_file" type="file">
-          </div>
-        </div>
-      </div>
     </div>
   </header>
   <!-- END Page header -->
@@ -256,14 +248,14 @@
     {% endif %}
 
     <!-- Submit -->
-    <section>
+    <section class="bg-img submit sticky">
       <div class="container">
         <header class="section-header">
           <span>Terminer?</span>
           <h2>Soumettre</h2>
           <p>Veuillez revoir vos informations une fois de plus et appuyer sur le bouton ci-dessous pour mettre votre entreprise en ligne.</p>
         </header>
-        <p class="text-center">{{ form_widget(form.submit, { 'label': 'Valider votre inscription' }) }}</p>
+        <p class="text-center">{{ form_widget(form.submit, { 'label': 'Valider' }) }}</p>
       </div>
     </section>
     <!-- END Submit -->
@@ -272,4 +264,8 @@
   {{ form_row(form._token) }}
   {{ form_end(form, {'render_rest': false}) }}
 
+{% endblock %}
+
+{% block javascripts %}
+<script src="{{ asset('assets/js/sticky.js') }}"></script>
 {% endblock %}
