--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 	<!-- Page header -->
-	<header class="page-header bg-img size-lg" style="background-image: url(assets/img/bg-banner2.jpg)">
+	<header class="page-header view-profile-business" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
 		<div class="container">
 			<div class="header-detail">
 				<img class="logo" src="{{ asset('uploads/images/' ~ business.image) }}" alt="logo entreprise">
