--- a/templates/offers/_form.html.twig
+++ b/templates/offers/_form.html.twig
@@ -2,14 +2,14 @@
 
 {{ form_start(form) }}
 
-<header class="page-header">
+<header class="page-header header-edit-offer" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
 
 	<div class="container page-name">
 		<h1 class="text-center">{{ form_title }}</h1>
 		<p class="lead text-center">{{ form_desc }}</p>
 	</div>
 
-	<div class="container">
+	<div class="container form-edit-offer">
 
 		<div class="row">
 			<div class="form-group col-xs-12">
@@ -107,7 +107,7 @@
 	<!-- END Job detail -->
 
 	<!-- Submit -->
-	<section class="bg-alt">
+	<section class="bg-img submit sticky">
 		<div class="container">
 			<header class="section-header">
 				<span>Terminé ?</span>
