--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<header class="page-header" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
+	<header class="page-header header-list-offer" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
 		<div class="container page-name">
 			<h1 class="text-center">Liste des offres d'emploi disponibles</h1>
 			<p class="lead text-center">Faciliter votre recherche à l'aide du filtre :</p>
-			<div class="container">
+			<div class="container list-offer">
 				<form action="#">
 					<div class="row">
 						<div class="form-group col-xs-12 col-sm-4">
