--- a/templates/offers/show.html.twig
+++ b/templates/offers/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<!-- Page header -->
-	<header class="page-header bg-img size-lg" style="background-image: url(assets/img/bg-banner2.jpg)">
+	<header class="page-header view-offer" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
 		<div class="container">
 			<div class="header-detail">
 				<img class="logo" src="assets/img/logo-google.jpg" alt="logo entreprise">
