--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -150,13 +150,13 @@
 
 {{ form_start(form) }}
 
-<header class="page-header" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }});">
+<header class="page-header header-add-new" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }});">
   <div class="container page-name">
     <h1 class="text-center">{{ form_title }}</h1>
     <p class="lead text-center">{{ form_desc }}</p>
   </div>
 
-  <div class="container">
+  <div class="container form-add-student">
     <div class="row">
       <div class="col-xs-12 col-sm-4">
         <div class="form-group">
@@ -248,7 +248,7 @@
               <span class="input-group-addon">ans</span>
             </div>
           </div>
-          <div class="form-group col-xs-8 col-sm-6">
+          <div class="form-group col-xs-12 col-sm-6">
             <div class="input-group input-group-sm">
               <span class="input-group-addon">
                 <i class="fa fa-envelope"></i>
@@ -263,14 +263,6 @@
               {{ form_errors(form.email) }}
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="button-group">
-      <div class="action-buttons">
-        <div class="upload-button">
-         <!-- <button class="btn btn-block btn-primary"></i>Choisir une image de couverture</button>
-          {{form_widget(form.coverImage)}}-->
         </div>
       </div>
     </div>
