--- a/templates/students/show.html.twig
+++ b/templates/students/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<!-- Page header -->
-	<header class="page-header bg-img" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
+	<header class="page-header view-profile-student" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
 		<div class="container">
 			<div class="row">
 				{% if student.image %}
