--- a/templates/students/edit.html.twig
+++ b/templates/students/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Students{% endblock %}
+{% block title %}Edition des étudiants{% endblock %}
 
 {% block body %}
 
