fix(product) : experience student

--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -270,7 +270,7 @@
 </header>
 <main>
   <!-- Social media -->
-  {% if is_granted('ROLE_STUDENT') %}
+  {# {% if is_granted('ROLE_STUDENT') %} #}
   <section>
     <div class="container">
 
@@ -392,7 +392,7 @@
     </div>
   </section>
   <!-- END Skills -->
-  {% endif %}
+  {# {% endif %} #}
   <!-- Submit -->
   <section class="bg-img submit sticky" style="background-image: url({{ asset('assets/img/bg-facts.jpg') }});">
     <div class="container">
